[tool.poetry]
name = "uniswap_v3_client"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^5.31.1"
uniswap-python = {git = "https://github.com/risingsun007/uniswap-python.git"}

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
